opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hg_lib"
bug-reports: "https://github.com/janestreet/hg_lib/issues"
dev-repo: "git+https://github.com/janestreet/hg_lib.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hg_lib/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "4.11.0"}
  "async"                    {>= "v0.15" & < "v0.16"}
  "core"                     {>= "v0.15" & < "v0.16"}
  "core_kernel"              {>= "v0.15" & < "v0.16"}
  "expect_test_helpers_core" {>= "v0.15" & < "v0.16"}
  "ppx_jane"                 {>= "v0.15" & < "v0.16"}
  "dune"                     {>= "2.0.0"}
]
synopsis: "A library that wraps the Mercurial command line interface"
description: "
A library that wraps the Mercurial command line interface.
"
