opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hg_lib"
bug-reports: "https://github.com/janestreet/hg_lib/issues"
dev-repo: "git+https://github.com/janestreet/hg_lib.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hg_lib/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.11.0"}
  "async"
  "core"
  "core_kernel"
  "expect_test_helpers_core"
  "ppx_jane"
  "dune"                     {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library that wraps the Mercurial command line interface"
description: "
A library that wraps the Mercurial command line interface.
"
